--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -9,7 +9,7 @@
       <a class="a__text" href="">¿Olvido su contraseña?</a>
       <input id="btnLogin"  class="submit__btn" type="submit" value="Iniciar Sesión">
       <div class="registrarse">
-        <span class="span__text">Click para <a id="linkLogin" href="/register">registrarse</a></span>
+        <span class="span__text">Click para <a id="linkLogin" href="PetParadise/register">registrarse</a></span>
       </div>
     </form>
   </div>
