--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -13,7 +13,7 @@
                 </div>
                 <input (click)="onRegister()" id="btnRegister" class="submit__btn" type="submit" value="Crear cuenta">
                 <div class="registrarse">
-                    <span class="span__text">¿Ya tienes una cuenta? <a id="linkRegister" href="">Inicia Sesión</a></span>
+                    <span class="span__text">¿Ya tienes una cuenta? <a id="linkRegister" href="PetParadise/login">Inicia Sesión</a></span>
                 </div>
             </form>
         </div>
