--- a/src/app/public/components/footer-content/footer-content.component.html
+++ b/src/app/public/components/footer-content/footer-content.component.html
@@ -5,8 +5,8 @@
     </div>
     <div class="footer__first__middle">
       <ul class="footer__list">
-        <li class="footer__item"><a class="footer__link" href="/home">Home</a></li>
-        <li class="footer__item"><a class="footer__link" href="/products">Productos</a></li>
+        <li class="footer__item"><a class="footer__link" href="PetParadise/home">Home</a></li>
+        <li class="footer__item"><a class="footer__link" href="PetParadise/products">Productos</a></li>
         <li class="footer__item"><a class="footer__link" href="">Contacto</a></li>
       </ul>
     </div>
