--- a/src/app/public/components/navbar-content/navbar-content.component.html
+++ b/src/app/public/components/navbar-content/navbar-content.component.html
@@ -7,7 +7,7 @@
         <li class="nav__item"><a href="PetParadise/products" class="nav__link">Productos</a></li>
         <li class="nav__item"><a href="#contact" class="nav__link">Contacto</a></li>
       </ul>
-      <a class="nav__register" href="/login">Iniciar Sesion</a>
+      <a class="nav__register" href="PetParadise/login">Iniciar Sesion</a>
       <!--<img src="./assets/menu.svg" alt="" class="nav__menu">-->
     </div>
   </nav>
